# sfml-rtos-audio-vis

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/analysis/: AutoGain.cpp  AutoGain.h  FFT.cpp  FFT.h  SpectrumAnalyzer.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h  AudioRingBuffer.cpp  AudioRingBuffer.h  FrequencyBand.h
src/util/: MinMaxTracker.h
